--- a/templates/translation/translations.html.twig
+++ b/templates/translation/translations.html.twig
@@ -6,28 +6,9 @@
             <h1>App translations</h1>
         </div>
     </div>
-    <div class="row">
-        <div class="col-md-6">
-            <div class="form-group">
-                <label for="domain">Translation domain</label>
-                <select name="domain" class="form-control">
-                    {% for domain in domains %}
-                        <option value="{{ domain }}" {% if domain == selectedDomain %}selected{% endif %}>{{ domain }}</option>
-                    {% endfor %}
-                </select>
-            </div>
-        </div>
-        <div class="col-md-6">
-            <div class="form-group">
-                <label for="locale">Translation locale</label>
-                <select name="locale" class="form-control">
-                    {% for locale in locales %}
-                        <option value="{{ locale }}" {% if locale == selectedLocale %}selected{% endif %}>{{ locale }}</option>
-                    {% endfor %}
-                </select>
-            </div>
-        </div>
-    </div>
+
+    {% include 'translation/_filter_form.html.twig' %}
+
     <div class="row">
         <div class="col-md-12">
             <table class="table"
@@ -52,8 +33,8 @@
                         <td>{{ message }}</td>
                         <td>
                             {% set inputVal = '' %}
-                            {% if catalogs[selectedLocale][key] is defined %}
-                                {% set inputVal = catalogs[selectedLocale][key] %}
+                            {% if translatedMessages[key] is defined %}
+                                {% set inputVal = translatedMessages[key] %}
                             {% endif %}
                             <input class="form-control"
                                    type="text"
@@ -61,6 +42,9 @@
                                    placeholder="Translation in {{ selectedLocale }}"
                                    name="{{ key }}-{{ selectedLocale }}-{{ selectedDomain }}"
                             >
+                            <div class="alert alert-success mt-2 mb-0 p-2 d-none" role="alert">
+                                Translation saved !
+                            </div>
                         </td>
                     </tr>
                 {% endfor %}
@@ -97,7 +81,13 @@
                     }).then((response) => {
                         return response.json();
                     }).then((data) => {
-                        return data;
+                        if (data.success) {
+                            const successAlert = translationInput.nextSibling.nextSibling;
+                            successAlert.classList.remove('d-none');
+                            setTimeout(() => {
+                                successAlert.classList.add('d-none');
+                            }, 1000);
+                        }
                     });
                 })
             });
