--- a/templates/translation/translations.html.twig
+++ b/templates/translation/translations.html.twig
@@ -40,7 +40,7 @@
                                    type="text"
                                    value="{{ inputVal }}"
                                    placeholder="Translation in {{ selectedLocale }}"
-                                   name="{{ key }}-{{ selectedLocale }}-{{ selectedDomain }}"
+                                   name="{{ key }}|{{ selectedLocale }}|{{ selectedDomain }}"
                             >
                             <div class="alert alert-success mt-2 mb-0 p-2 d-none" role="alert">
                                 Translation saved !
