--- a/templates/translation/translations.html.twig
+++ b/templates/translation/translations.html.twig
@@ -12,8 +12,8 @@
     <div class="row">
         <div class="col-md-12">
             <table class="table"
-                   data-path="{{ absolute_url(path('app_translation_translations', {'domain': '__DOMAIN__', 'locale': '__LOCALE__'})) }}"
-                   data-submit="{{ absolute_url(path('app_translation_submittranslations')) }}"
+                   data-path="{{ absolute_url(path('app_translation_list', {'domain': '__DOMAIN__', 'locale': '__LOCALE__'})) }}"
+                   data-submit="{{ absolute_url(path('app_translation_add')) }}"
             >
                 <thead>
                 <tr>
