Add countries list

--- a/templates/translation/translations.html.twig
+++ b/templates/translation/translations.html.twig
@@ -3,9 +3,11 @@
 {% block body %}
     <div class="row">
         <div class="col-md-12">
-            <h1>App translations</h1>
+            <h1>Translations</h1>
+            <p>Translate your application in all the supported locales.</p>
         </div>
     </div>
+    <hr>
 
     {% include 'translation/_filter_form.html.twig' %}
 
