Adding footer, colours translations and some style

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,6 +9,12 @@
     <body>
         <div class="container">
             {% block body %}{% endblock %}
+            <footer class="my-5 pt-5 text-muted text-center text-small">
+                <p class="mb-1">
+                    Created by
+                    <a href="https://hugo-soltys.com">Hugo Soltys</a>
+                </p>
+            </footer>
         </div>
         {% block javascripts %}{% endblock %}
     </body>
