--- a/templates/translation/translations.html.twig
+++ b/templates/translation/translations.html.twig
@@ -13,7 +13,7 @@
 
     <div class="row">
         <div class="col-md-12">
-            <table class="table"
+            <table class="table table-striped"
                    data-path="{{ absolute_url(path('app_translation_list', {'domain': '__DOMAIN__', 'locale': '__LOCALE__'})) }}"
                    data-submit="{{ absolute_url(path('app_translation_add')) }}"
             >
